ft2Util v1r1p24

Get MergeHistFiles.exe from Monitor, not TestReport.
Get configData from GlastRelease.
No longer build TestReport or configData.
Various OpsSim1-specific tweaks that will have to be backed out.
-------------------------------------------

1.24
-----------------
Common v2r4p2
FastMon v2r4p3
Monitor dp20071019

Make some mc-related options to programs that were hardwired for OpsSim1
depend on DATASOURCE.
Don't keep or register alarmHandler html.
Do keep and register fastMon tuple. And error summary.
Register digi & recon trending files.
Put (almost) all chunk-level files in their own subdirectories.
Make cleanup work better with load balancing.
Reformat a bunch of stuff.
Handle LCI runs.
Determine LPA, LCI, or MC from delivered_events file.

Load balance chunks (not crumbs yet) between 2 AFS staging volumes.  The
implementation is not good, it's a shell script that has a bunch of stuff
hardwired the should be gotten from config.
-------------------------------------------

1.25
-----------------
Use variable crumb sizes and a fixed number of crumbs/chunk.
Make reconEor and reconTrend depend on mergeCalCrumbs.
Reorder stuff in XML.
-------------------------------------------

1.26
-----------------
Reimplement load balancing of temp files in python.
Load balance crumbs as well as chunks.
Frob organization of temp dirs.
Merge & keep FastMon error summary for LCI runs.
-------------------------------------------

1.27
-----------------
Monitor dp20071114

More XML reordering.
Use a better hash (MD5 instead of python hash) to balance runs.
Select calibrations for MC or LPA.
Export to GSSC on prod.
Specify python interpreter when running FastMon.

-------------------------------------------

1.28
-----------------
ft2Util v1r1p26
Allow use of rootFiles.py as a hadd-like tree merger.
Make proper version numbers for export files.
Tweak queues.
Start work on assigning each chunk a list of preferred hosts to increase
chance of sharing AFS cache.
